# cpp-opus-project

./: CMakeLists.txt  README.md
scr/: AudioFile.h  CMakeLists.txt  encoder.cpp  encoder.h  main.cpp
src/: encoder.cpp  encoder.h  main.cpp
